175 - Drop down arrow position for membership and sales goals.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -288,6 +288,12 @@ header {
     top: 30px;
     width: 11px;
 }
+#total-sales-goals,
+#total-membership-goals {
+    .filter-caret {
+        right: 28px;
+    }
+}
 #visits-blocks-widget,
 #members-blocks-widget {
     .filter-caret {
@@ -444,6 +450,12 @@ header {
         transition: none;
         width: 180px;
 
+    }
+}
+#total-sales-goals,
+#total-membership-goals {
+    .form-control {
+        padding-right: 30px;
     }
 }
 #earned-revenue {
