174 and 180 - Removed note list item from accordion and fixed slider border when active.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1567,3 +1567,10 @@ div.dp-popup td.disabled {
     float: left;
     margin: 3px 5px 0 0;
 }
+/* SLIDER OVERRIDE FOR BLUE OUTLINE IN CHROME */
+.ui-slider .ui-slider-handle {
+    cursor: pointer;
+}
+.ui-state-focus {
+    outline: none;
+}
