176 - Link colors of action popovers.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -300,6 +300,14 @@ header {
         top: 15px;
     }
 }
+.popover-content {
+    a {
+        color: @darkgrey;
+    }
+    a:hover {
+        color: @aqua;
+    }
+}
 /******************************/
 /******** WELCOME TEXT ********/
 /******************************/
