--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -781,6 +781,7 @@ header {
 .y-marker:nth-child(4) { top: 75%; }
 .bar-set {
     bottom: 0;
+    cursor: pointer;
     display: inline-block;
     margin: 0 10px 0 0;
     position: absolute;
