Basic styles for rollovers and data test via date.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -753,6 +753,48 @@ header {
             bottom: 0;
             position: absolute;
         }
+        .popover {
+            background-color: @lightgrey;
+            border-color: @lightgrey;
+            .legend-circle-bo {
+                background-color: @cobalt;
+                border-radius: 5px;
+                clear: both;
+                float: left;
+                height: 10px;
+                width: 10px;
+            }
+            .legend-circle-c {
+                background-color: @teal;
+                border-radius: 5px;
+                clear: both;
+                float: left;
+                height: 10px;
+                width: 10px;
+            }
+            .legend-circle-gs {
+                background-color: @aqua;
+                border-radius: 5px;
+                clear: both;
+                float: left;
+                height: 10px;
+                width: 10px;
+            }
+            .legend-circle-m {
+                background-color: @gold;
+                border-radius: 5px;
+                clear: both;
+                float: left;
+                height: 10px;
+                width: 10px;
+            }
+        }
+        .popover.top>.arrow {
+            border-top-color: @lightgrey;
+        }
+        .popover.top>.arrow:after {
+            border-top-color: @lightgrey;
+        }
     }
 }
 .bar-line {
