Rollover styles (working on data and positioning).

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -788,6 +788,26 @@ header {
                 height: 10px;
                 width: 10px;
             }
+            .popover-weather-icon {
+                background-color: #fff;
+                float: left;
+                margin-right: 7px;
+                padding: 10px;
+            }
+            .popover-temp {
+                font-family: Raleway,sans-serif;
+                font-size: 255%;
+            }
+            .popover-weather-text {
+                font-family: Raleway,sans-serif;
+                text-transform: capitalize;
+            }
+            .popover-data {
+                clear: both;
+            }
+            .popover-data td {
+                padding: 5px;
+            }
         }
         .popover.top>.arrow {
             border-top-color: @lightgrey;
