Minor API change and styling tweaks in prep for weather data in rollover.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -796,11 +796,13 @@ header {
             }
             .popover-temp {
                 font-family: Raleway,sans-serif;
-                font-size: 255%;
+                font-size: 180%;
             }
             .popover-weather-text {
                 font-family: Raleway,sans-serif;
+                font-size: 70%;
                 text-transform: capitalize;
+                white-space: normal;
             }
             .popover-data {
                 clear: both;
