Force include of jquery-ui-min.css.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2,7 +2,7 @@
 /******** IMPORTS AND VARIABLES ********/
 /***************************************/
 @import "bootstrap/bootstrap";
-@import "jquery-ui.min.css";
+@import (inline) "jquery-ui.min.css";
 
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
