--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -22,6 +22,7 @@ body, p, td, label, .checkbox label {
 
 @black: rgba(37,33,34,1);
 @darkgrey: rgba(66,66,66,1);
+@darkmediumgrey: rgba(82,82,82,1);
 @mediumgrey: rgba(135,135,135,1);
 @lightgrey: rgba(236,234,231,1);
 @white: rgba(255,255,255,1);
@@ -754,8 +755,28 @@ header {
             position: absolute;
         }
         .popover {
-            background-color: @lightgrey;
-            border-color: @lightgrey;
+            background-color: @darkmediumgrey;
+            border: none;
+            padding: 0;
+            .popover-weather-bar {
+                background-color: @lightblue;
+                border-radius: 6px;
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+                color: @black;
+                overflow: hidden;
+                .popover-weather-10am,
+                .popover-weather-4pm {
+                    float: left;
+                    font-size: 70%;
+                    width: 130px;
+                }
+            }
+            .popover-content,
+            .popover-content td {
+                color: @white;
+                padding: 0;
+            }
             .legend-circle-bo {
                 background-color: @cobalt;
                 border-radius: 5px;
@@ -791,12 +812,14 @@ header {
             .popover-weather-icon {
                 background-color: #fff;
                 float: left;
+                height: 40px;
                 margin-right: 7px;
                 padding: 10px;
+                width: 40px;
             }
             .popover-temp {
                 font-family: Raleway,sans-serif;
-                font-size: 180%;
+                font-size: 70%;
             }
             .popover-weather-text {
                 font-family: Raleway,sans-serif;
@@ -806,16 +829,18 @@ header {
             }
             .popover-data {
                 clear: both;
+                margin: 8px;
+                width: 100%;
             }
             .popover-data td {
                 padding: 5px;
             }
         }
         .popover.top>.arrow {
-            border-top-color: @lightgrey;
+            border-top-color: @darkmediumgrey;
         }
         .popover.top>.arrow:after {
-            border-top-color: @lightgrey;
+            border-top-color: @darkmediumgrey;
         }
     }
 }
