Weather data in accordion (styling and need to set date range title).

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1009,6 +1009,16 @@ header {
             font-size: 90%;
             padding-bottom: 3px;
         }
+        .weather-details {
+            background-color: rgba(0,0,0,.7);
+            color: @white;
+            height: 43px;
+            overflow: hidden;
+            padding: 5px;
+            position: relative;
+            top: -43px;
+            width: 43px;
+        }
     }
 }
 #earned-revenue {
