--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -766,11 +766,15 @@ header {
                 border-bottom-right-radius: 0;
                 color: @black;
                 overflow: hidden;
+                padding: 10px;
                 .popover-weather-10am,
                 .popover-weather-4pm {
                     float: left;
+                    font-family: Raleway,sans-serif;
                     font-size: 70%;
-                    width: 130px;
+                    text-transform: capitalize;
+                    white-space: normal;
+                    width: 120px;
                 }
             }
             .popover-content,
@@ -817,16 +821,6 @@ header {
                 margin-right: 7px;
                 padding: 10px;
                 width: 40px;
-            }
-            .popover-temp {
-                font-family: Raleway,sans-serif;
-                font-size: 70%;
-            }
-            .popover-weather-text {
-                font-family: Raleway,sans-serif;
-                font-size: 70%;
-                text-transform: capitalize;
-                white-space: normal;
             }
             .popover-data {
                 clear: both;
