--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -318,6 +318,11 @@ header {
     margin-bottom: 10px;
     padding: 25px;
     position: relative;
+    label {
+        font-size: 90%;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
 }
 /******************************/
 /******** WELCOME TEXT ********/
@@ -1335,7 +1340,7 @@ header {
 /***********************/
 /******** FORMS ********/
 /***********************/
-input {
+.form-control {
     background-color: @lightgrey;
     border: 0;
     padding: 10px;
