--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -364,6 +364,9 @@ header {
     margin: 4px 0 0 0;
     text-transform: uppercase;
 }
+.intro {
+    margin-bottom: 40px;
+}
 /****************************************/
 /******** TOP VISITS STAT BLOCKS ********/
 /****************************************/
@@ -1345,8 +1348,31 @@ header {
     border: 0;
     padding: 10px;
 }
-input.empty {
-    color: @lightmediumgrey;
+.save-goals {
+    text-align: right;
+}
+.button-expand {
+    background-color: @aqua;
+    border-radius: 20px;
+    cursor: pointer;
+    height: 25px;
+    padding: 5px 0 0 5px;
+    width: 25px;
+    svg {
+        width: 15px;
+    }
+    path {
+        fill: @white;
+    }
+}
+.button-expand.collapsed {
+    padding: 5px 0 0 6px;
+    svg {
+        transform: rotate(270deg);
+    }
+}
+.collapse-title {
+    padding-top: 10px;
 }
 /************************/
 /******** FOOTER ********/
