--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1357,6 +1357,9 @@ header {
     cursor: pointer;
     height: 25px;
     padding: 5px 0 0 5px;
+    position: absolute;
+    right: -25px;
+    top: 4px;
     width: 25px;
     svg {
         width: 15px;
