Dial sizing progress.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -566,6 +566,7 @@ header {
 .dial-wrapper {
     display: inline-block;
     margin: 0 auto;
+    width: 100%;
     circle {
         cursor: pointer;
     }
@@ -574,6 +575,7 @@ header {
     margin-right: 5px;
     position: relative;
     .channel-info {
+        opacity: 0;
         position: absolute;
         text-align: center;
         text-transform: uppercase;
