Dials now wrap to second line for smaller screens.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -463,7 +463,7 @@ header {
 #membership,
 #revenue,
 #earned-revenue {
-    height: 234px;
+    min-height: 234px;
     position: relative;
     h2 {
         float: left;
@@ -565,7 +565,7 @@ header {
 }
 .dial-wrapper {
     display: inline-block;
-    margin: 0 auto;
+    margin-top: 30px;
     width: 100%;
     circle {
         cursor: pointer;
@@ -1486,7 +1486,6 @@ LG = Large devices Desktops (≥1200px)
     box-sizing: border-box;
     float: left;
     height: 115px;
-    top: 50px;
     width: 115px;
 }
 
