Removed underlines from action menu links on hover.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -306,9 +306,11 @@ header {
 .popover-content {
     a {
         color: @darkgrey;
+        text-decoration: none;
     }
     a:hover {
         color: @aqua;
+        text-decoration: none;
     }
 }
 .page {
