226 - Dates in rollovers.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -761,6 +761,9 @@ body > .popover {
         color: @black;
         overflow: hidden;
         padding: 10px;
+        .popover-date {
+            font-size: 70%;
+        }
         .popover-weather-10am,
         .popover-weather-4pm {
             float: left;
