177 - Extended width of bar graph.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -836,9 +836,9 @@ body > .popover.top>.arrow:after {
 }
 #bar-graph-scroll-pane {
     clear: both;
-    margin: 0 auto;
+    margin: 0 0 0 35px;
     overflow: auto;
-    width: 80%;
+    width: 94%;
     #bar-graph-y {
         border-left: 2px solid @darkgrey;
         float: left;
