--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -760,9 +760,10 @@ body > .popover {
         border-bottom-right-radius: 0;
         color: @black;
         overflow: hidden;
-        padding: 10px;
+        padding: 10px 10px 5px 10px;
         .popover-date {
-            font-size: 70%;
+            font-size: 12px;
+            margin-bottom: 5px;
         }
         .popover-weather-10am,
         .popover-weather-4pm {
@@ -815,6 +816,7 @@ body > .popover {
         background-color: #fff;
         float: left;
         height: 40px;
+        margin-bottom: 15px;
         margin-right: 7px;
         padding: 10px;
         width: 40px;
