228 - Printing working with the exception of background colors, a known browser glitch.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -58,13 +58,15 @@ body {
     letter-spacing: .05em;
 }
 @media print {
-    body * {
+    body .unprintable {
         display: none;
     }
-    body .printable {
-        display: block;
-    }
+
 }
+body .printable {
+        display: block;
+        -webkit-print-color-adjust: exact;
+    }
 h1 {
     font-family: 'Raleway', sans-serif;   /* CURRENTLY NO H1 TAG */
 }
