--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -744,11 +744,13 @@ header {
 }
 .legend-check-circle {
     border-radius: 10px;
+    cursor: pointer;
     float: left;
     height: 20px;
     width: 20px;
 }
 .legend-check {
+    display: none;
     height: 20px;
     left: 5px;
     position: relative;
@@ -756,6 +758,9 @@ header {
     path {
         fill: @white;
     }
+}
+.active .legend-check {
+    display: block;
 }
 body > .popover {
     background-color: @darkmediumgrey;
