172 - Accordion online/offline toggle working.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1113,7 +1113,7 @@ body > .popover.top>.arrow:after {
         transform: rotate(270deg);
         width: 11px;
     }
-    .open svg {
+    .open > svg {
         transform: rotate(0deg);
     }
     li {
