214 - Hourly attendance pulling data and curved line graph test (NOT ready for dev deployment).

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1785,3 +1785,37 @@ div.dp-popup td.disabled {
 .ui-state-focus {
     outline: none;
 }
+
+
+
+
+
+
+/* TEST SIMPLE LINE GRAPH */
+
+#graph path {
+                stroke: steelblue;
+                stroke-width: 1;
+                fill: none;
+            }
+            
+            .axis {
+              shape-rendering: crispEdges;
+            }
+
+            .x.axis line {
+              stroke: lightgrey;
+            }
+
+            .x.axis .minor {
+              stroke-opacity: .5;
+            }
+
+            .x.axis path {
+              display: none;
+            }
+
+            .y.axis line, .y.axis path {
+              fill: none;
+              stroke: #000;
+            }
