--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1792,30 +1792,17 @@ div.dp-popup td.disabled {
 
 
 /* TEST SIMPLE LINE GRAPH */
-
 #graph path {
-                stroke: steelblue;
-                stroke-width: 1;
-                fill: none;
-            }
-            
-            .axis {
-              shape-rendering: crispEdges;
-            }
-
-            .x.axis line {
-              stroke: lightgrey;
-            }
-
-            .x.axis .minor {
-              stroke-opacity: .5;
-            }
-
-            .x.axis path {
-              display: none;
-            }
-
-            .y.axis line, .y.axis path {
-              fill: none;
-              stroke: #000;
-            }
+    stroke: @darkgrey;
+    stroke-width: 1;
+    fill: none;
+}
+.axis {
+  shape-rendering: crispEdges;
+}
+.x.axis line, .x.axis .minor {
+  stroke: @lightgrey;
+}
+.y.axis line {
+  stroke: @darkgrey;
+}
