214 - Quick style fix for hourly graph heading.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -464,7 +464,8 @@ header {
 #total-membership-goals,
 #membership,
 #revenue,
-#earned-revenue {
+#earned-revenue,
+#attendance {
     min-height: 234px;
     position: relative;
     h2 {
