151 - Initial layout of settings page; working on styling

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1442,6 +1442,63 @@ body > .popover.top>.arrow:after {
 .collapse-title {
     padding-top: 10px;
 }
+
+/********** USER SETTINGS PAGE **********/
+#settings-page .user-image {
+    content:url(http://klerede:8888/img/user-no-image.png);
+    background-color: #dcb335;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+    border-radius: 90px;
+    display: inline-block;
+    height: 160px;
+    margin-right: 9px;
+    width: 160px;
+    margin-bottom: 20px;
+}
+
+#settings-page .content-box {
+    background-color: #fff;
+    padding-left: 25px;
+    padding-top: 30px;
+    padding-bottom: 400px;
+}
+
+#settings-page .setting-title {
+    font-weight: 700;
+    float: left;
+    width: 110px;
+    text-align: right;
+}
+
+#settings-page hr {
+    height: 1px;
+    color: #DAD6D6;
+    background: #DAD6D6;
+    font-size: 0;
+    border: 0;
+    margin-bottom: 12px;
+    margin-top: 11px;
+    width: 80%;
+    margin-right: 100%;
+    display: inline-block;
+}
+
+#settings-page .content-box a {
+    width: 50px;    
+    text-align: left;
+    display: inline-block;
+}
+
+#settings-page .name-content, .username-content, .email-content, 
+.password-content, .acct-type-content, .goals-content, .users-content {
+    float: left;
+    margin: 0 50px;
+    width: 630px;
+}
+
+
 /************************/
 /******** FOOTER ********/
 /************************/
