153 - Manage Users Modal initial setup.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1510,6 +1510,34 @@ body > .popover.top>.arrow:after {
     width: 60%;
 }
 
+#settings-page .manage-users-modal {
+    background-color: #fff;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#mymodal .modal-body .manage-users-modal hr {
+    height: 1px;
+    color: #DAD6D6;
+    background: #DAD6D6;
+    font-size: 0;
+    border: 0;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    width: 100%;
+    margin-right: 100%;
+    display: inline-block;
+}
+
+#mymodal .modal-user-name, .modal-user-email, .modal-acct-type, .modal-remove-button {
+    float: left;
+    padding-left: 10px;
+}
+
+
+
+
 
 /************************/
 /******** FOOTER ********/
