154 - Help page layout

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1536,6 +1536,57 @@ body > .popover.top>.arrow:after {
 }
 
 
+/***********************/
+/******** HELP *********/
+/***********************/
+
+.help-page .content-box {
+    background-color: #fff;
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 50px;
+}
+
+.help-page .content-box .search-container .form-control {
+    font-size: 13px;
+    background-color: #fff;
+    border: 2px solid #e2dedd;
+}
+
+.help-page .content-box .breadcrumbs {
+    padding-bottom: 15px;
+}
+
+.help-page .spacer {
+    padding-bottom: 15px;
+}
+
+.help-page .browse h4 {
+    padding-bottom: 18px;
+}
+
+.help-page .topics li {
+    padding-bottom: 17px;
+}
+
+.help-page.footer-box {
+    background-color: #fff;
+    margin-top: 20px;
+    overflow: hidden;
+    padding-left: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.help-page.footer-box h4 {
+    float: left;
+}
+
+.help-page.footer-box button {
+    float: left;
+    margin-left: 30px;
+}
+
 
 
 
