270 - Hiding weather data in quarter view rollovers.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -852,6 +852,7 @@ body > .popover {
     .popover-data {
         clear: both;
         margin: 8px;
+        margin-right: 40px;
         width: 100%;
     }
     .popover-data td {
