269 - Fixed the accordion dates and hiding the slider.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -976,6 +976,7 @@ body > .popover.top>.arrow:after {
     background-color: @lightgrey;
     border-radius: 4px;
     clear: left;
+    display: none;   /* TEMP: Hiding slider */
     .bar-graph-slider {
         background-color: @lightgrey;
         .ui-state-default {
